Added water, renamed landtypes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script src="jquery.timer.js"></script>
 	<script src="grid.js" type="text/javascript"></script>
 	<script src="creature.js" type="text/javascript"></script>
-	<script src="vegetation.js" type="text/javascript"></script>
+	<script src="landtypes.js" type="text/javascript"></script>
 	<link href="style.css" rel="stylesheet">
 </head>
 
